@@ -15,6 +15,8 @@ display online/offline status if possible.
 
 use gravatar to fetch picture if there's nothing in addressbook
 
+consider: maybe it's not worth displaying the window if we have nothing useful to say?
+
 
 
 google social is suggesting pages for people that don't then link back to them.
