@@ -86,7 +86,7 @@ Added many docs to the source code.
 Shelf now sends a proper User-Agent to remote servers when fetching feeds.
 
 Removed the xmltramp library, using simplejson to parse the Dopplr API files
-instead.
+instead. Not that the Dopplr module works. But if it did, I would.
 
 Messed with the flickr photo display style to include titles, and have smaller
 thumbnails. I think I prefer this way.
@@ -97,4 +97,9 @@ all others.
 
 We now correctly strip CSS styling from feed contents.
 
-Special casing for last.fm urls is now in, so you'll see contact's recently-played tracks.
+Special casing for last.fm urls is now in, so you'll see contact's
+recently-played tracks. Special-casing for the few pages I know of
+that have [totally brokwn RSS feeds](http://jerakeen.org/blog/2008/02/irritating-rss-feed-links/).
+
+Feed entries now display about how long ago they were, rather than absolute
+times. Do we like this? Maybe this should be a preference.
